// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Final form radio component Should render correctly 1`] = `
<FormGroup
  bsClass="form-group"
  className="field-group"
  validationState={null}
>
  <Col
    bsClass="col"
    componentClass="div"
  >
    <Radio
      bsClass="radio"
      disabled={false}
      id="name"
      inline={false}
      name="name"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      title=""
      value=""
    >
      foo
    </Radio>
  </Col>
</FormGroup>
`;

exports[`Final form radio component Should render with error message 1`] = `
<FormGroup
  bsClass="form-group"
  className="field-group"
  validationState="error"
>
  <Col
    bsClass="col"
    componentClass="div"
  >
    <Radio
      bsClass="radio"
      disabled={false}
      id="name"
      inline={false}
      name="name"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      title=""
      value=""
    >
      foo
    </Radio>
  </Col>
</FormGroup>
`;
